# rusql

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.sh  debug_shell.sh  gen_parser.sh
examples/: example.rs
src/: definitions.rs  exec.rs  expressions.rs  lib.rs  rusql.rs  rusql_cli.rs  shell.rs  sql.rustpeg  table.rs
src/parser/: ast.rs  definitions.rs  parser.rs  sql.rustpeg
tests/: expressions.rs  test_exec.rs  test_expressions.rs
